--- a/src/stylesheets/Sidebar.css
+++ b/src/stylesheets/Sidebar.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     flex: 0.35;
     border-right: 1px solid rgb(154, 178, 192);
+    background-color: rgba(157, 177, 208, 0.665);
+    backdrop-filter: blur(3px);
 }
 
 .sidebar-header {
