--- a/src/stylesheets/Chat.css
+++ b/src/stylesheets/Chat.css
@@ -3,3 +3,96 @@
     flex-direction: column;
     flex: 0.65;
 }
+
+.chat-header {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #7db6e2;
+}
+
+.chat-header-info {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.chat-header-info>h3 {
+    margin-bottom: 3px;
+    font-weight: 500;
+}
+
+.chat-header-info>p {
+    color: gray;
+}
+
+.chat-body {
+    flex: 1;
+    background: #A3C6F7;
+    background: -webkit-radial-gradient(center, #A3C6F7, #BBB8E0);
+    background: -moz-radial-gradient(center, #A3C6F7, #BBB8E0);
+    background: radial-gradient(ellipse at center, #A3C6F7, #BBB8E0);
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    overflow-y: auto;
+}
+
+.recieved-message {
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    width: fit-content;
+    border-radius: 7px;
+    background-color: rgb(222, 225, 250);
+    margin-bottom: 30px;
+}
+
+.timestamp {
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.chat-name {
+    position: absolute;
+    top: -15px;
+    font-weight: 400;
+    font-size: xx-small;
+}
+
+.sent-message {
+    margin-left: auto;
+    background-color: #b3d3d7;
+}
+
+.input-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+    border: none;
+}
+
+
+.typespace {
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+    flex: 0.9;
+    width: 90%;
+}
+
+.input-footer>input:hover {
+    border: 1px solid rgb(175, 170, 170);
+}
+
+.send-btn {
+    width: 40px;
+}
+
+.input-footer>button {
+    border-radius: 20px;
+    margin: auto;
+    border: none;
+    background-color: #bed9ff;
+}
