--- a/src/stylesheets/Sidebar.css
+++ b/src/stylesheets/Sidebar.css
@@ -14,6 +14,12 @@
     backdrop-filter: blur(2px);
 }
 
+.sidebar>h2 {
+    background-color: rgba(157, 177, 208, 0.665);
+    margin-left: 25px;
+    font-weight: 600;
+}
+
 
 .sidebar-buttons {
     display: flex;
@@ -35,8 +41,9 @@
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: rgb(203, 218, 236);
+    background-color: rgb(198, 217, 240);
     backdrop-filter: blur(2px);
+    border-radius: 7px;
 }
 
 
